--- a/styles/main.css
+++ b/styles/main.css
@@ -5077,7 +5077,7 @@ tbody.collapse.in {
 
 .pagination-sm>li:first-child>a,.pagination-sm>li:first-child>span {
     border-bottom-left-radius: 3px;
-    border-top-left-radius: 3px
+    border-top-left-radius: 3px;
 }
 
 .pagination-sm>li:last-child>a,.pagination-sm>li:last-child>span {
